--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -12,3 +12,27 @@ h2 {
     text-align: center;
     font-size:60px;
 }
+
+h3 {
+    font-size:60px;
+}
+
+#footer {
+    background-color: gray;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 150px;
+}    
+
+#footer h3 {
+    text-align: center;
+    font-size:20px;
+    color: white;
+}
+
+div h3 {
+    text-align: center;
+    font-size:20px;
+    color: red;
+}
