--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -18,11 +18,13 @@ h3 {
 }
 
 #footer {
-    background-color: gray;
+    background-color: black;
+    text-align: center;
+    color: #ff5c00;
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 150px;
+    height: 100px;
 }    
 
 #footer h3 {
@@ -31,8 +33,9 @@ h3 {
     color: white;
 }
 
-div h3 {
+div {
     text-align: center;
     font-size:20px;
-    color: red;
+    color: #ff5c00;
+    ;
 }
