--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -1,11 +1,14 @@
 
+
 body {
     font-family: "Kanit" !important;
+    text-align: center;
 }
 
 h1 {
     text-align: center;
     font-size:22px;
+    color: #ff5c00;
 }
 
 h2 {
@@ -14,23 +17,8 @@ h2 {
 }
 
 h3 {
+    text-align: center;
     font-size:60px;
-}
-
-#footer {
-    background-color: black;
-    text-align: center;
-    color: #ff5c00;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-}    
-
-#footer h3 {
-    text-align: center;
-    font-size:20px;
-    color: white;
 }
 
 div {
@@ -39,3 +27,33 @@ div {
     color: #ff5c00;
     ;
 }
+
+#header{
+    text-align: center;
+    font-size:20px;
+    color: #ff5c00;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    ;
+}
+
+#menu {
+    background-color:black;
+    text-align: center;
+    color: #ff5c00;
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    width: 100%;...
+}    
+
+#footer {
+    background-color:black;
+    font-size:15px;
+    text-align: center;  
+    color: #ff5c00; 
+    left: 0;
+    bottom: 0;
+    width: 100%;  
+}    
