--- a/public/asset/style.css
+++ b/public/asset/style.css
@@ -8,7 +8,6 @@ body {
 h1 {
     text-align: center;
     font-size:22px;
-    color: #ff5c00;
 }
 
 h2 {
@@ -21,33 +20,62 @@ h3 {
     font-size:60px;
 }
 
-#header{
-    text-align: center;
-    font-size:20px;
-    color: #ff5c00;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-    ;
-}
-
-#menu {
-    background-color:black;
-    text-align: center;
-    color: #ff5c00;
-    position: fixed;
-    overflow: hidden;
-    top: 0;
-    width: 100%;
-}    
-
-#footer {
-    position:fixed;
-    background-color:black;
-    font-size:15px;
-    text-align: center;  
-    color: #ff5c00; 
-    left: 0;
-    bottom: 0;
-    width: 100%;  
-}    
+.footer-basic {
+    padding:40px 0;
+    background-color:rgb(107, 106, 106);
+    color:white;
+  }
+  
+  .footer-basic ul {
+    padding:0;
+    list-style:none;
+    text-align:center;
+    font-size:18px;
+    line-height:1.6;
+    margin-bottom:0;
+  }
+  
+  .footer-basic li {
+    padding:0 10px;
+  }
+  
+  .footer-basic ul a {
+    color:inherit;
+    text-decoration:none;
+    opacity:0.8;
+  }
+  
+  .footer-basic ul a:hover {
+    opacity:1;
+  }
+  
+  .footer-basic .social {
+    text-align:center;
+    padding-bottom:25px;
+  }
+  
+  .footer-basic .social > a {
+    font-size:24px;
+    width:40px;
+    height:40px;
+    line-height:40px;
+    display:inline-block;
+    text-align:center;
+    border-radius:50%;
+    border:1px solid #ffff ;
+    margin:0 8px;
+    color:inherit;
+    opacity:0.75;
+  }
+  
+  .footer-basic .social > a:hover {
+    opacity:0.9;
+  }
+  
+  .footer-basic .copyright {
+    margin-top:15px;
+    text-align:center;
+    font-size:13px;
+    color:white;
+    margin-bottom:0;
+  }
